@@ -1,0 +1,2 @@
+[10 - 100, 15 - 1500, 20 - 200, 30 - 300, 40 - 400, 45 - 4500, 50 - 500, 60 - 600, 70 - 700, 75 - 7500, 80 - 800, 90 - 900, 100 - 1000]
+[2 - 20, 3 - 300, 4 - 40, 6 - 60, 8 - 80, 9 - 900, 12 - 120, 14 - 140, 16 - 160, 18 - 180, 21 - 2100, 22 - 220, 24 - 240, 26 - 260, 27 - 2700, 28 - 280, 32 - 320, 33 - 3300, 34 - 340, 36 - 360, 38 - 380, 39 - 3900, 42 - 420, 44 - 440, 46 - 460, 48 - 480, 51 - 5100, 52 - 520, 54 - 540, 56 - 560, 57 - 5700, 58 - 580, 62 - 620, 63 - 6300, 64 - 640, 66 - 660, 68 - 680, 69 - 6900, 72 - 720, 74 - 740, 76 - 760, 78 - 780, 81 - 8100, 82 - 820, 84 - 840, 86 - 860, 87 - 8700, 88 - 880, 92 - 920, 93 - 9300, 94 - 940, 96 - 960, 98 - 980, 99 - 9900]
